[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://GameFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://ScoreLabel.tres" type="DynamicFont" id=3]
[ext_resource path="res://MenuFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://TitleFont.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.87414
margin_bottom = -1.87415
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="FallsContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FallsLabel" type="Label" parent="FallsContainer"]
margin_right = 224.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 3 )
text = "Falls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Falls" type="Label" parent="FallsContainer"]
margin_top = 52.0
margin_right = 224.0
margin_bottom = 148.0
custom_fonts/font = ExtResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -202.0
margin_top = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="TimeContainer"]
margin_right = 202.0
margin_bottom = 48.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Time"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="TimeContainer"]
margin_top = 52.0
margin_right = 202.0
margin_bottom = 148.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
pause_mode = 2
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -152.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Menu"]
margin_right = 1920.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.384314, 0.772549, 1 )
text = "The Bravest Wheel"
align = 1

[node name="Level1" type="Button" parent="Menu"]
margin_top = 100.0
margin_right = 1920.0
margin_bottom = 148.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Level3")
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover = Color( 0.407843, 0.501961, 1, 1 )
text = "Level 1"

[node name="Level3" type="Button" parent="Menu"]
margin_top = 152.0
margin_right = 1920.0
margin_bottom = 200.0
focus_neighbour_top = NodePath("../Level1")
focus_neighbour_bottom = NodePath("../Quit")
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover = Color( 0.407843, 0.501961, 1, 1 )
text = "Level 2"

[node name="Quit" type="Button" parent="Menu"]
margin_top = 204.0
margin_right = 1920.0
margin_bottom = 252.0
focus_neighbour_top = NodePath("../Level3")
focus_neighbour_bottom = NodePath("../Level1")
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover = Color( 0.407843, 0.501961, 1, 1 )
text = "Quit"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Menu/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Menu/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_Quit_pressed"]
